@@ -3,6 +3,9 @@ Revision history for Perl extension Qudo
 0.0208
    2010-06-XX
         - ADD: Job#abort method.
+        - MOD: can pass the option for plugins.
+        - MOD: remove doc/ dir qudo schema written for Qudo::Test's DATA section.
+        - ADD: qudo initial setup script.
 
 0.0207
    2010-06-02
